translate app in french

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,57 +1,57 @@
 <resources>
-    <string name="about">About</string>
-    <string name="add">Add</string>
-    <string name="add_counter">Add a counter</string>
-    <string name="add_folder">Add a folder</string>
-    <string name="add_folder_dialog_message">Entrer the name of the folder</string>
-    <string name="add_folder_dialog_title">New folder</string>
-    <string name="all_counters">All counters</string>
+    <string name="about">À propos</string>
+    <string name="add">Ajouter</string>
+    <string name="add_counter">Ajouter un compteur</string>
+    <string name="add_folder">Ajouter un dossier</string>
+    <string name="add_folder_dialog_message">Saisir le nom du dossier</string>
+    <string name="add_folder_dialog_title">Nouveau dossier</string>
+    <string name="all_counters">Tous les compteurs</string>
     <string name="amount">Total</string>
     <string name="app_name" translatable="false">Counter++</string>
     <string name="application">Application</string>
-    <string name="ascending">Ascending</string>
-    <string name="cancel">Cancel</string>
-    <string name="change_color">Change color</string>
-    <string name="color_picker_item_description">Select a color by touching</string>
-    <string name="color_picker_message">Select a color</string>
-    <string name="color_picker_selected_color">Selected color</string>
-    <string name="color_picker_title">Color picker</string>
-    <string name="communicate">Communicate</string>
-    <string name="contact_us">Contact us</string>
-    <string name="count">Count</string>
+    <string name="ascending">Ascendant</string>
+    <string name="cancel">Annuler</string>
+    <string name="change_color">Changer la couleur</string>
+    <string name="color_picker_item_description">Sélectionner une couleur en touchant</string>
+    <string name="color_picker_message">Sélectionner une couleur</string>
+    <string name="color_picker_selected_color">Couleur sélectionnée</string>
+    <string name="color_picker_title">Sélecteur de couleur</string>
+    <string name="communicate">Communiquer</string>
+    <string name="contact_us">Contactez-nous</string>
+    <string name="count">Compte</string>
     <string name="counter">Compteur</string>
     <string name="counter_list">Liste des compteurs</string>
-    <string name="counter_name">Counter name</string>
+    <string name="counter_name">Nom du compteur</string>
     <string name="counters">Compteurs</string>
     <string name="date">Date</string>
-    <string name="decreasing">Decreasing</string>
+    <string name="decreasing">Décroissant</string>
     <string name="decrement">Décrément</string>
-    <string name="decrement_statistics">Decrement statistics</string>
-    <string name="delete">Delete</string>
-    <string name="delete_all_counters">Delete all counters</string>
-    <string name="delete_all_counters_warning">This action will delete all counters in this folder. Are you sure?</string>
-    <string name="delete_folder_warning">This action will delete this folder and all its counters. Are you sure?</string>
-    <string name="descending">Descending</string>
+    <string name="decrement_statistics">Statistiques de décrément</string>
+    <string name="delete">Supprimer</string>
+    <string name="delete_all_counters">Supprimer tous les compteurs</string>
+    <string name="delete_all_counters_warning">Cette action supprimera tous les compteurs de ce dossier. Êtes-vous sûr?</string>
+    <string name="delete_folder_warning">Cette action supprimera ce dossier et tous ses compteurs. Êtes-vous sûr?</string>
+    <string name="descending">Descendant</string>
     <string name="direction">Direction</string>
-    <string name="duplicate">Duplicate</string>
-    <string name="edit">Edit</string>
-    <string name="email_warning">Please install an email application to contact us</string>
-    <string name="error">Error</string>
-    <string name="evaluate">Evaluate</string>
-    <string name="export_data_error_message">Error when exporting the data</string>
-    <string name="export_data_success_message">The data have been exported to file %s</string>
-    <string name="folder">Folder</string>
+    <string name="duplicate">Dupliquer</string>
+    <string name="edit">Modifier</string>
+    <string name="email_warning">Installez une application de messagerie pour nous contacter</string>
+    <string name="error">Erreur</string>
+    <string name="evaluate">Évaluer</string>
+    <string name="export_data_error_message">Erreur lors de l\'exportation des données</string>
+    <string name="export_data_success_message">Les données ont été exportées dans un fichier %s</string>
+    <string name="folder">Dossier</string>
     <string name="folder_list">Liste des dossiers</string>
     <string name="folders">Dossiers</string>
-    <string name="full_screen">Full screen</string>
+    <string name="full_screen">Plein écran</string>
     <string name="home">Accueil</string>
-    <string name="import_data_dialog_message">Data import in progress</string>
-    <string name="import_data_failure_message">Error when importing data</string>
-    <string name="import_data_success_message">Data has been successfully imported</string>
-    <string name="increasing">Increasing</string>
+    <string name="import_data_dialog_message">Importation de données en cours</string>
+    <string name="import_data_failure_message">Erreur lors de l\'importation de données</string>
+    <string name="import_data_success_message">Les données ont été importées avec succès</string>
+    <string name="increasing">Croissant</string>
     <string name="increment">Incrément</string>
-    <string name="increment_statistics">Increment statistics</string>
-    <string name="infinite">Infinite</string>
+    <string name="increment_statistics">Statistiques d\'increment</string>
+    <string name="infinite">Infini</string>
     <string name="information">Information</string>
     <string name="key_activate_sound" translatable="false">SHARED_PREF_ACTIVATE_SOUND</string>
     <string name="key_activate_vibrator" translatable="false">SHARED_PREF_ACTIVATE_VIBRATOR</string>
@@ -66,66 +66,66 @@
     <string name="key_see_tutorial" translatable="false">SHARED_PREF_SEE_TUTORIAL</string>
     <string name="key_share_app" translatable="false">SHARED_PREF_SHARE_APP</string>
     <string name="key_theme_and_color" translatable="false">SHARED_PREF_THEME_AND_COLOR</string>
-    <string name="limit">Limit</string>
-    <string name="name">Name</string>
-    <string name="name_required_warning">Name is required</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="next">Next</string>
+    <string name="limit">Limite</string>
+    <string name="name">Nom</string>
+    <string name="name_required_warning">Le nom est obligatoire</string>
+    <string name="navigation_drawer_close">Fermer la navigation latérale</string>
+    <string name="navigation_drawer_open">Ouvrir la navigation latérale</string>
+    <string name="next">Suivant</string>
     <string name="no_counters">Aucun compteur</string>
-    <string name="no_counters_add">Add a counter item +</string>
-    <string name="no_folders">No folders</string>
-    <string name="no_statistics">No statistics</string>
+    <string name="no_counters_add">Ajouter un compteur +</string>
+    <string name="no_folders">Aucun dossier</string>
+    <string name="no_statistics">Aucune statistique</string>
     <string name="notes">Notes</string>
-    <string name="objective">Objective</string>
+    <string name="objective">Objectif</string>
     <string name="ok">OK</string>
     <string name="pref_header_about">@string/about</string>
-    <string name="pref_header_advanced">Advanced</string>
-    <string name="pref_header_controls">Controls</string>
-    <string name="pref_header_display">Display</string>
-    <string name="privacy_policy">Privacy policy</string>
-    <string name="rename">Rename</string>
+    <string name="pref_header_advanced">Avancés</string>
+    <string name="pref_header_controls">Contôles</string>
+    <string name="pref_header_display">Affichage</string>
+    <string name="privacy_policy">Politique de confidentialité</string>
+    <string name="rename">Renommer</string>
     <string name="reset">Réinitialisation</string>
-    <string name="reset_all_counters">Reset all counters</string>
+    <string name="reset_all_counters">Réinitialiser les compteurs</string>
     <string name="reset_all_counters_warning">This action will reset all counters in this folder. Are you sure?</string>
-    <string name="reset_all_data_success_message">All data have been successfully reset</string>
-    <string name="reset_data_warning">This action will delete all data. Are you sure?</string>
-    <string name="reset_statistics">Reset statistics</string>
-    <string name="select_folder">Select a folder</string>
+    <string name="reset_all_data_success_message">Cette action réinitialisera tous les compteurs de ce dossier. Êtes-vous sûr?</string>
+    <string name="reset_data_warning">Cette action supprimera toutes les données. Êtes-vous sûr?</string>
+    <string name="reset_statistics">Réinitialiser les statistiques</string>
+    <string name="select_folder">Sélectionner un dossier</string>
     <string name="settings">Réglages</string>
-    <string name="share">Share</string>
-    <string name="simple_counter">Simple counter</string>
-    <string name="skip">Skip</string>
-    <string name="start">Start</string>
+    <string name="share">Partager</string>
+    <string name="simple_counter">Simple compteur</string>
+    <string name="skip">Sauter</string>
+    <string name="start">Commencer</string>
     <string name="statistics">Statistiques</string>
-    <string name="step">Step</string>
-    <string name="storage_permission_warning">To export data permission to write in external storage is required. Please go to settings and enable write in external storage.</string>
-    <string name="summary_about">This free app is a non private, non-commercial and leisure project</string>
-    <string name="summary_activate_sound">Play sounds on increment, decrement and reset</string>
-    <string name="summary_activate_vibrator">Vibrate on increment, decrement and reset</string>
-    <string name="summary_contact_us">Any suggestion or bug? Please, let us know!</string>
-    <string name="summary_count_volume_buttons">Count when the device\'s volume button is pressed</string>
-    <string name="summary_delete_all_counters">Delete all counters, folders and statistics</string>
-    <string name="summary_export_data">Export your data to a file. Requires storage permission on Android 6+</string>
-    <string name="summary_import_data">Reset the app with data from exported file. Requires storage permission on Android 6+</string>
-    <string name="summary_rate">Give us your feedback to help improve this app</string>
-    <string name="summary_screen_always_on">Prevent device from sleeping while running in the foreground</string>
-    <string name="summary_share">Share this app with your friends!</string>
-    <string name="summary_theme_and_color">Theme and colors</string>
-    <string name="summary_tutorial">See all app\'s features in a quick tutorial</string>
-    <string name="title_activate_sound">Activate sounds</string>
-    <string name="title_activate_vibrator">Activate vibrator</string>
+    <string name="step">Étape</string>
+    <string name="storage_permission_warning">Pour exporter des données, il est nécessaire d’autoriser l’écriture dans le stockage externe. Aller dans les paramètres et autoriser l\'écriture dans le stockage externe.</string>
+    <string name="summary_about">Cette application est gratuite et non commerciale. Elle a été développée par loisir.</string>
+    <string name="summary_activate_sound">Jouer des sons lors des incrément, décrément et réinitialisation</string>
+    <string name="summary_activate_vibrator">Vibrer lors des incrément, décrément et réinitialisation</string>
+    <string name="summary_contact_us">Une suggestion ou un bug? Informez-nous en!</string>
+    <string name="summary_count_volume_buttons">Décompte lorsqu’on appuie sur le bouton de volume</string>
+    <string name="summary_delete_all_counters">Supprimer tous les compteurs, dossiers et statistiques</string>
+    <string name="summary_export_data">Exporter vos données dans un fichier. Nécessite une autorisation de stockage sur Android 6+</string>
+    <string name="summary_import_data">Réinitialiser l\'application avec les données d\'un fichier exporté. Nécessite une autorisation de stockage sur Android 6+</string>
+    <string name="summary_rate">Envoyez-nous vos commentaires pour nous aider à améliorer cette application</string>
+    <string name="summary_screen_always_on">Empêcher la mise ne veille de l\'application pendant son utilisation</string>
+    <string name="summary_share">Partagez cette application avec vos amis!</string>
+    <string name="summary_theme_and_color">Thème et couleurs</string>
+    <string name="summary_tutorial">Voir toutes les fonctionnalités de l\'application dans un petit tutoriel</string>
+    <string name="title_activate_sound">Activer les sons</string>
+    <string name="title_activate_vibrator">Activer la vibration</string>
     <string name="title_contact_us">@string/contact_us</string>
-    <string name="title_count_volume_buttons">Use volume keys to count</string>
-    <string name="title_delete_all_counters">Delete all counters</string>
-    <string name="title_export_data">Export data</string>
-    <string name="title_import_data">Import data</string>
-    <string name="title_rate">Rate</string>
-    <string name="title_screen_always_on">Keep screen on</string>
+    <string name="title_count_volume_buttons">Compter avec les touches du volume</string>
+    <string name="title_delete_all_counters">Supprimer les compteurs</string>
+    <string name="title_export_data">Exporter des données</string>
+    <string name="title_import_data">Importer des données</string>
+    <string name="title_rate">Évaluation</string>
+    <string name="title_screen_always_on">Garder l\'écran allumé</string>
     <string name="title_share">@string/share</string>
     <string name="title_terms"><![CDATA[Terms & Conditions]]></string>
-    <string name="title_theme_and_color">Customize user interface theme and colors</string>
-    <string name="title_tutorial">Tutorial</string>
+    <string name="title_theme_and_color">Personnaliser le thème et les couleurs de l\'application</string>
+    <string name="title_tutorial">Tutoriel</string>
     <string name="title_version">@string/version</string>
     <string name="tutorial_slide_1_description">Utiliser un simple compteur infini depuis de l\'écran d\'accueil</string>
     <string name="tutorial_slide_1_tooltip_1">Tapez sur la barre de progression pour augmenter le compteur</string>
@@ -136,9 +136,9 @@
     <string name="tutorial_slide_3_description">Créez des dossiers pour organiser vos compteurs à partir de l\'écran de la liste des dossiers</string>
     <string name="tutorial_slide_3_tooltip_1">Tapez sur le bouton plus pour créer un dossier</string>
     <string name="tutorial_slide_4_description">Suivez vos activités grâce à des statistiques avancées</string>
-    <string name="tutorial_image">Tutorial\'s image</string>
+    <string name="tutorial_image">Image du tutoriel</string>
     <string name="type">Type</string>
-    <string name="validate">Validate</string>
+    <string name="validate">Valider</string>
     <string name="version">Version</string>
-    <string name="warning">Warning</string>
+    <string name="warning">Attention</string>
 </resources>
